--- a/note/src/main/assets/about.html
+++ b/note/src/main/assets/about.html
@@ -13,6 +13,7 @@
  
  <h4 style="color:#44caaa">
  希望大家能支持，有什么好的意见以最快的方式和我沟通，非常感谢大家。
+ 源代码在Github中地址为：https://github.com/whroid/Tuo
  </h4>
  
  <h4 style="color:#44caaa">
